Move bdr script to folder

--- a/bdr-master-master/replica/postgresql.conf
+++ b/bdr-master-master/replica/postgresql.conf
@@ -621,5 +621,7 @@ max_wal_senders = 4
 max_replication_slots = 4
 track_commit_timestamp = on
 
-bdr.connections = 'vm3'
-bdr.vm3_dsn = 'host=192.168.3.3 port=5432 user=postgres dbname=ridwan'
+bdr.connections = 'vm2'
+bdr.vm2_dsn = 'host=192.168.3.2 port=5432 user=postgres dbname=$PG_DATABASE_NAME'
+bdr.vm2_init_replica = on
+bdr.vm2_replica_local_dsn = 'host=127.0.0.1 port=5432 user=postgres dbname=$PG_DATABASE_NAME'
